# nero-desktop

./: .gitignore  .prettierrc  Cargo.toml  flake.nix  package.json  tsconfig.base.json
crates/app/: Cargo.toml  Tauri.toml
crates/app/capabilities/: default.toml
crates/app/src/: commands.rs  main.rs  player.rs  types.rs
crates/plugin-extensions/: Cargo.toml  build.rs  package.json  tsconfig.json
crates/plugin-extensions/src/: extensions.rs  lib.rs  torrent.rs  types.rs  utils.rs
crates/plugin-extensions/webview-src/: extensions.ts  index.ts  torrent.ts  types.ts
nero-ui/: .prettierrc  Cargo.toml  Trunk.toml  build.rs  index.html  package.json  styles.css  tailwind.config.js  tsconfig.json  vite.config.ts
nero-ui/src/: App.svelte  App.tsx  app.rs  extensions.rs  index.css  index.tsx  macros.rs  main.rs  main.ts  types.rs  utils.rs
nero-ui/src/components/: EmptyFeedback.svelte  EpisodeCard.svelte  EpisodesList.svelte  ErrorMessage.svelte  ExtensionLoader.svelte  ExtensionSecuritySettings.svelte  LoadExtensionModal.svelte  NodeSettings.svelte  PlayIcon.svelte  Router.svelte  SearchIcon.svelte  SeriesCard.svelte  ShareIcon.svelte  SmallEpisodeCard.svelte  SortIcon.svelte  Toolbar.svelte  TorrentSettings.svelte  VideoPlayerSettings.svelte  VideoSelectionModal.svelte  button.rs  card.rs  icon.rs  list.rs  mod.rs  toolbar.rs  video.rs
nero-ui/src/components/extensions/: ExtensionCard.tsx  ExtensionDialog.tsx  ExtensionInfoDialog.tsx  ExtensionLoadDialog.tsx  ExtensionMetaPanel.tsx  ExtensionsList.tsx
nero-ui/src/components/icons/: InboxIcon.svelte  PlusIcon.svelte  WarningIcon.svelte  XMarkIcon.svelte
nero-ui/src/components/media/: EpisodeCard.tsx  SeriesCard.tsx  VideoSelector.tsx
nero-ui/src/components/settings/: LanguageSettings.tsx  PlayerSettings.tsx  TorrentSettings.tsx
nero-ui/src/components/ui/: Button.tsx  Dialog.tsx  EmptyFeed.tsx  Input.tsx  SectionTable.tsx  Toggle.tsx  Toolbar.tsx  Typography.tsx
nero-ui/src/hooks/: infinite.rs  mod.rs  resources.rs
nero-ui/src/layouts/: ExtensionGuardLayout.tsx  Layout.svelte  Layout.tsx  MediaLayout.tsx  SettingsLayout.tsx  SidebarLayout.tsx
nero-ui/src/lib/: appState.svelte.ts  createInfiniteQuery.svelte.ts  createMutation.svelte.ts  createQuery.svelte.ts  dummy.ts  extension.svelte.ts  i18n.ts  infiniteScroll.svelte.ts  queries.svelte.ts  queries.ts
nero-ui/src/locales/: en.json
nero-ui/src/pages/: AppSettingsPage.svelte  AppSettingsPage.tsx  ExtensionsSettings.svelte  ExtensionsSettingsPage.svelte  ExtensionsSettingsPage.tsx  Home.svelte  HomePage.svelte  HomePage.tsx  Search.svelte  SearchPage.svelte  SearchPage.tsx  Series.svelte  SeriesPage.svelte  SeriesPage.tsx  Settings.svelte  SettingsPage.svelte  Watch.svelte  home.rs  mod.rs  search.rs  series.rs  watch.rs
nero-ui/src/pages/settings/: AppSettings.svelte  ExtensionsSettings.svelte  Settings.svelte
nero-ui/src/primitives/: createExtensionLoader.ts  createFilters.ts  createInfiniteResource.ts  createMutation.tsx  createSearch.ts  createSentinel.tsx  createSeries.ts  createVideoSelector.ts
nero-ui/src/providers/: AppProvider.tsx  ExtensionProvider.tsx
nero-ui/src/state/: actions.svelte.ts  createInfiniteScroll.svelte.ts  queries.svelte.ts
nero-ui/src/store/: appState.ts
nero-ui/src/types/: episode.ts  filters.ts  httpResource.ts  page.ts  searchFilter.ts  series.ts  video.ts
