[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/extensions",
    "crates/wasi-logging",
    "crates/wit-process",
    "crates/processors",
    "crates/wasm-host",
]

[workspace.dependencies]
anyhow = "1.0.95"
tokio = "1.46.1"
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
wasmtime = "37.0.1"
wasmtime-wasi = "37.0.1"
wasmtime-wasi-http = "37.0.1"
