[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/extensions",
    "crates/plugin-extensions",
    "crates/processor",
    "crates/wasi-logging",
]

[workspace.dependencies]
anyhow = "1.0.95"
bytes = "1.10.1"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.46.1"
tracing = "0.1.41"
url = "2.5.4"
wasm-metadata = "0.227.1"
wasmtime = "37.0.1"
wasmtime-wasi = "37.0.1"
wasmtime-wasi-http = "37.0.1"
