[package]
name = "nero-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7.0-rc1", features = ["csr"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
js-sys = "0.3.70"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
typewind = { path = "../typewind" }
nero-components = { path = "../nero-components" }

[build-dependencies]
typewind = { path = "../typewind" }
