[package]
name = "nero-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
sycamore = "0.9.1"
sycamore-router = "0.9.1"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
js-sys = "0.3.70"
web-sys = { version = "0.3.77", features = ["HtmlInputElement"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
rustwind = { git = "https://github.com/dacchidocchi/rustwind" }

[build-dependencies]
rustwind = { git = "https://github.com/dacchidocchi/rustwind" }
