[package]
name = "nero-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = [
    "config-toml",
] }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tauri = { version = "2", features = ["config-toml"] }
tracing = { workspace = true }
tracing-subscriber = "0.3.20"
url = { workspace = true, features = ["serde"] }
nero-processor = { path = "../processor" }
nero-extensions = { path = "../extensions" }

[features]
custom-protocol = ["tauri/custom-protocol"]
