[package]
name = "nero-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = [
    "config-toml",
] }

[dependencies]
portpicker = "0.1.1"
tauri = { version = "2", features = ["config-toml"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-nero-extensions = { path = "../plugin-extensions" }
tracing = { workspace = true }
tracing-subscriber = "0.3.20"

[features]
custom-protocol = ["tauri/custom-protocol"]
