[package]
name = "tauri-plugin-nero-extensions"
version = "0.1.0"
edition = "2024"
links = "tauri-plugin-nero-extensions"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }

[dependencies]
libnero = { git = "https://github.com/nero-app/libnero.git", rev = "7c26662" }
tauri = { version = "2", default-features = false }
tracing = { workspace = true }
